Remade EmailServiceIntermediate into EmailProvider  as class library

--- a/EMailProviderClient/EMailProviderClient.csproj
+++ b/EMailProviderClient/EMailProviderClient.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EmailServiceIntermediate\EmailServiceIntermediate.csproj" />
+    <ProjectReference Include="..\EmailProvider\EmailProvider.csproj" />
   </ItemGroup>
 
 </Project>
