--- a/EmailProviderServer/EmailProviderServer.csproj
+++ b/EmailProviderServer/EmailProviderServer.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EmailServiceIntermediate\EmailServiceIntermediate.csproj" />
+    <ProjectReference Include="..\EmailProvider\EmailProvider.csproj" />
   </ItemGroup>
 
 </Project>
