--- a/EMailProviderClient/EMailProviderClient.csproj
+++ b/EMailProviderClient/EMailProviderClient.csproj
@@ -6,6 +6,9 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PlatformTarget>x86</PlatformTarget>
+    <BaseOutputPath>E:\EmailDomain\EmailProvider\Build</BaseOutputPath>
+    <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
