--- a/EmailProviderServer/EmailProviderServer.csproj
+++ b/EmailProviderServer/EmailProviderServer.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
-    <BaseOutputPath>E:\EmailDomain\EmailProvider\Build</BaseOutputPath>
+    <BaseOutputPath>C:\Users\krist\OneDrive\Desktop\EmailExecutables</BaseOutputPath>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
