Major client changes, added class library for ExtendedWinForms functionality. Changed app to me an mdi container (work in progress). New folder functionality

--- a/EMailProviderClient/EMailProviderClient.csproj
+++ b/EMailProviderClient/EMailProviderClient.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EmailProvider\EmailProvider.csproj" />
+    <ProjectReference Include="..\WindowsFormsCore\WindowsFormsCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
