--- a/EMailProviderClient/EMailProviderClient.csproj
+++ b/EMailProviderClient/EMailProviderClient.csproj
@@ -9,6 +9,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <BaseOutputPath>C:\Users\krist\OneDrive\Desktop\EmailExecutables</BaseOutputPath>
     <Platforms>AnyCPU;x86</Platforms>
+	<EnableWindowsFormsHighDpiAutoResizing>true</EnableWindowsFormsHighDpiAutoResizing>
   </PropertyGroup>
 
   <ItemGroup>
