Email sending fixes, added supoort for TLS a IP resolving through domain

--- a/EmailService/EmailService.csproj
+++ b/EmailService/EmailService.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DnsClient" Version="1.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EmailProvider\EmailProvider.csproj" />
   </ItemGroup>
 
