Added message signing and more settings.

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -1,10 +1,16 @@
 [SERVER]
-ServerName = .
-DataBaseName = Email_DB
-ServerIP = localhost
-ServerPort = 8009
+ServerName = Server
+DataBaseName = DataBaseName
 
 [CLIENT]
 
 [SHARED]
-FileLogPath = C:\EmailLogs\Logs.txt
+FileLogPath = FullPathToLogFile
+ServerIP = ApplicationServerIP
+ServerPort = ApplicationServerPort
+SMTPServiceIP = ServiceIP
+SMTPPrivateServicePort = PrivateCommunicationPort
+SMTPPublicServicePort = PublicCommunicationPort
+EmailDomain = YourDomain
+DKIMPrivateKeyPath = PathToDKIMPrivateKey(PEM or RSA)
+DKIMRecordSelector = DKIMSelector
