--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -12,5 +12,6 @@ SMTPServiceIP = ServiceIP
 SMTPPrivateServicePort = PrivateCommunicationPort
 SMTPPublicServicePort = PublicCommunicationPort
 EmailDomain = YourDomain
+EmailPublicDomain = YourDomain
 DKIMPrivateKeyPath = PathToDKIMPrivateKey(PEM or RSA)
 DKIMRecordSelector = DKIMSelector
